# A-Multimodal-Framework-for-Detecting-Harmful-Memes

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_Data Collection.ipynb  03_Data Preprocessing.ipynb  03_Model_Building_&_Evaluation.ipynb  03_Model_Building_&_Evaluation_2.ipynb  03_Model_Building_Evaluation_Improved.ipynb  04_Model Training.ipynb  05_Model Evaluation.ipynb
notebooks/.ipynb_checkpoints/: 01_Data Collection-checkpoint.ipynb  02_Exploratory Data Analysis-checkpoint.ipynb  03_Data Preprocessing-checkpoint.ipynb  03_Model_Building_Usign_CLIP-checkpoint.ipynb  04_Model Training-checkpoint.ipynb  05_Model Evaluation-checkpoint.ipynb
