[project]
name = "a-multimodal-framework-for-detecting-harmful-memes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "uvicorn>=0.37.0",
]
